# dx-desktop-demo

./: Cargo.toml  Dioxus.toml
.github/workflows/: package.yml  package.yml.bak
assets/: main.css  main.css.br
docs/: bootstrap.bundle.min.js.br  bootstrap.min.css.br  index.html  tailwind.css  tailwind.css.br
docs/assets/dioxus/: dx-desktop-demo.js  dx-desktop-demo.js.br  dx-desktop-demo_bg.wasm  dx-desktop-demo_bg.wasm.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js.br
docs/codec/assets/dioxus/: dx-desktop-demo_bg.wasm  dx-desktop-demo_bg.wasm.br
docs/dx-desktop-demo/assets/dioxus/: dx-desktop-demo.js
docs/dx-desktop-demo/assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js
src/: codec.rs  codec_util.rs  lib.rs  main.rs  rust_crypt_codec.rs
