[package]
name = "dx-desktop-demo"
version = "0.1.0"
authors = ["hlfvngr <870012250@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop"] }

# Debug
dioxus-logger = "0.5.1"
anyhow = "1"
#openssl = '0.10.66'
#openssl-sys = "0.9.103"
base64 = "0.22.1"
rust-crypto-wasm = "0.3.1"


# Cargo.toml
[features]
bundle = []
